# oh-my-limit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
assets/: README.md
benches/: README.md
crates/oml-cli/: Cargo.toml
crates/oml-cli/src/: lib.rs  main.rs
crates/oml-cli/src/commands/: bench.rs  codex.rs  doctor.rs  help.rs  mod.rs  run.rs
crates/oml-cli/src/tui/: app.rs  app_event.rs  commands.rs  composer.rs  event_loop.rs  events.rs  limits.rs  mod.rs  model_picker.rs  slash_command_popup.rs  submission.rs  translator_picker.rs  translator_settings.rs  view.rs  width.rs  wrapping.rs
crates/oml-cli/src/tui/bottom_pane/: mod.rs  textarea.rs
crates/oml-cli/src/tui/chat/: history_cell.rs  mod.rs  reflow.rs  stream.rs
crates/oml-cli/src/tui/panels/: approval.rs  assistant.rs  diff.rs  events.rs  mod.rs  status.rs  usage.rs
crates/oml-codex-appserver/: Cargo.toml
crates/oml-codex-appserver/src/: account.rs  approvals.rs  client.rs  errors.rs  events.rs  lib.rs  process.rs  protocol.rs  requests.rs  review.rs  schema.rs  thread.rs  transport.rs  turn.rs
crates/oml-codex-exec/: Cargo.toml
crates/oml-codex-exec/src/: build_args.rs  events.rs  lib.rs  runner.rs
crates/oml-config/: Cargo.toml
crates/oml-config/src/: config.rs  defaults.rs  env_file.rs  lib.rs  paths.rs
crates/oml-core/: Cargo.toml
crates/oml-core/src/: glossary.rs  language.rs  lib.rs  report.rs  tokenize.rs  usage_gate.rs
crates/oml-core/src/mask/: code_like.rs  markdown.rs  mod.rs  placeholders.rs
crates/oml-storage/: Cargo.toml
crates/oml-storage/src/: cache.rs  db.rs  lib.rs  report.rs  session.rs
crates/oml-storage/src/migrations/: README.md
crates/oml-translation/: Cargo.toml
crates/oml-translation/src/: cache.rs  lib.rs  prompts.rs  translator.rs  validate.rs
crates/oml-translation/src/providers/: local_openai_compatible.rs  mod.rs  noop.rs  ollama.rs  remote_openai_compatible.rs
docs/: app-server-protocol.md  architecture.md  release.md  translation-pipeline.md  usage-gate.md
examples/: config.toml  korean-prompts.jsonl
packaging/completions/: README.md
packaging/homebrew/: README.md
packaging/man/: README.md
schemas/codex-appserver/: README.md  codex_app_server_protocol.v2.schemas.json
scripts/: verify-install.sh
scripts/dev/docker/: docker-compose.yml  serena.Dockerfile
tests/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
