[workspace]
members = [
    "crates/oml-cli",
    "crates/oml-core",
    "crates/oml-codex-appserver",
    "crates/oml-codex-exec",
    "crates/oml-translation",
    "crates/oml-storage",
    "crates/oml-config",
    "xtask",
]
default-members = ["crates/oml-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oh-my-limit/oh-my-limit"
homepage = "https://github.com/oh-my-limit/oh-my-limit"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
