[package]
name = "oh-my-limit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "oh-my-limit"
path = "src/bin/oh-my-limit.rs"

[[bin]]
name = "oml"
path = "src/bin/oml.rs"

[dependencies]
anyhow.workspace = true
oml-codex-appserver = { path = "../oml-codex-appserver" }
oml-config = { path = "../oml-config" }
oml-core = { path = "../oml-core" }
oml-translation = { path = "../oml-translation" }
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
