[package]
name = "oml-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
